Restore original index.html content
Restored the original content of index.html after accidental removal.

--- a/index.html
+++ b/index.html
@@ -286,16 +286,27 @@
     <div class="scrollable-page" id="page42">
       <h1 class="dancing">Little Moments makes unforgettable</h1>
       <div class="blocks">
-        <div class="block">4 th September is the first messaage from you</div>
-        <div class="block">13 th may is my first call ,i talk to you</div>
-        <div class="block">first selfie with her on Manisha mrg but its a group photo</div>
-        <div class="block">28 th august our first private meet to discuss the problem statement along with her in class ,you in yellow dress</div>
-        <div class="block">7 th oct evening First eat waffle together in canteen</div>
-        <div class="block">on 10 th October i proposed her.... based on a reel but i tell her its an dare ,but its from my heart.... but she also tells love you to drlg ❤️</div>
-        <div class="block">7 th October you sing me a first song for me</div>
-        <div class="block">23 october first date togetther in car</div>
-        <div class="block">First big fight on 7 th November ,you tell me enna vitu poidu on angry</div>
-        <div class="block">30 th October the first first ever thing she bought me dairymilk silk</div>
+       <div class="blocks">
+  <div class="block">13th May: Our very first call, the first time I ever talked to you 📞</div>
+
+  <div class="block">28th August: Our first private meet in class to discuss the problem statement. You looked stunning in your yellow dress 💛</div>
+
+  <div class="block">4th September: The day I received the very first message from you 📩</div>
+
+  <div class="block">7th October: You sang a song for me for the first time, a moment I'll always treasure 🎶</div>
+  
+  <div class="block">7th October Evening: We ate waffles together in the canteen for the first time 🧇</div>
+
+  <div class="block">10th October: I proposed to you... I used a reel and called it a 'dare,' but it was truly from my heart. You said "Love you too, drlg" ❤️</div>
+
+  <div class="block">23rd October: Our first real date together in the car 🚗</div>
+
+  <div class="block">30th October: The first gift you ever bought me—a Dairy Milk Silk 🍫</div>
+
+  <div class="block">7th November: Our first big fight. You were so angry you told me "enna vitu poidu," but I couldn't leave 🥺</div>
+
+  <div class="block">Our first selfie together at Manisha’s wedding—even if it was a group photo, it was special to me 📸</div>
+</div>
       </div>
       <button class="nav-btn" onclick="nextPage(4)">Back to Gifts</button>
     </div>
@@ -413,3 +424,4 @@ you will always remain the most beautiful feeling of my life.
   </script>
 </body>
 </html>
+
